fixing the filter position to avoid jumps

--- a/components/filter/index.module.scss
+++ b/components/filter/index.module.scss
@@ -287,24 +287,19 @@
     display: block;
     width: 100%;
     max-width: 375px;
-    position: relative;
-    height: fit-content;
+    position: absolute;
     padding-bottom: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, .3);
-    top: initial;
+    top: 25px;
     margin-top: 30px;
     left: 0;
     overflow-y: scroll;
     margin-left: 20px;
     transform: translateX(0);
-    &.isFixed {
-      position: fixed;
-      top: 100px;
-      height: calc(100vh - 120px);
-      max-height: 700px;
-      margin-left: 20px;
-      margin-top: 10px;
-    }
+    height: calc(100vh - 120px);
+    max-height: 700px;
+    margin-left: 20px;
+    margin-top: 10px;
     .showResultsMobile {
       display: none;
     }
@@ -317,10 +312,8 @@
     max-width: 395px;
     display: block;
     padding: 30px 20px;
-  }
-  .positionPlaceHolder {
     position: relative;
-    top: 200px;
   }
+  
   
 }
